--- a/examples/notebooks/haystack_agent_openai.ipynb
+++ b/examples/notebooks/haystack_agent_openai.ipynb
@@ -14,6 +14,16 @@
    "id": "e2484f9d54d39cf8"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Install Dependencies"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a6bb6a30030357a4"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
