Add authentication steps

--- a/examples/notebooks/langchain_react_agent_gemini.ipynb
+++ b/examples/notebooks/langchain_react_agent_gemini.ipynb
@@ -108,7 +108,7 @@
     "# Please reach out to support@ionicapi.com for help with add'l agent types.\n",
     "\n",
     "model = \"gemini-pro\"\n",
-    "llm = model = VertexAI(model_name=model, )\n",
+    "llm = model = VertexAI(model_name=model)\n",
     "\n",
     "ionic_tool = IonicTool().tool()\n",
     "\n",
