--- a/examples/notebooks/langchain_react_agent_openai.ipynb
+++ b/examples/notebooks/langchain_react_agent_openai.ipynb
@@ -2,28 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b8a4b767fd2c8b46",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Ionic with LangChain's ReAct agent and OpenAI GPT-3.5-turbo\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ioniccommerce/examples/blob/main/examples/notebooks/langchain_react_agent_openai.ipynb)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b8a4b767fd2c8b46"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Install dependencies"
-   ],
+   "id": "d62b4ab031f2a9a7",
    "metadata": {
     "collapsed": false
    },
-   "id": "d62b4ab031f2a9a7"
+   "source": [
+    "### Install dependencies"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6f1baf1217a5cea7",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -31,53 +36,62 @@
     "pip install --upgrade pip\n",
     "pip install langchain langchain_openai langchainhub\n",
     "pip install ionic-langchain"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6f1baf1217a5cea7",
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Setup OpenAI Key"
-   ],
+   "id": "7234327f0f99df6c",
    "metadata": {
     "collapsed": false
    },
-   "id": "7234327f0f99df6c"
+   "source": [
+    "### Setup OpenAI Key\n",
+    "Create an API key at [OpenAI | API Keys](https://platform.openai.com/api-keys)\n",
+    "Either set your environment variable:\n",
+    "`export OPENAI_API_KEY=<YOUR_API_KEY_HERE` \n",
+    "\n",
+    "Or edit the following code block and replace \"YOUR_API_KEY_HERE\" with your key."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5d86ab6620a9d879",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-07T21:48:54.096374Z",
+     "start_time": "2024-02-07T21:48:54.090032Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "openai_api_key = os.getenv(\"OPENAI_API_KEY\") "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-07T21:48:54.096374Z",
-     "start_time": "2024-02-07T21:48:54.090032Z"
-    }
-   },
-   "id": "5d86ab6620a9d879",
-   "execution_count": 2
+    "openai_api_key = os.environ.get(\"OPENAI_API_KEY\", \"YOUR_API_KEY_HERE\") "
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Create your Agent with the Ionic Commerce Tool"
-   ],
+   "id": "b24413a3fa2f8ebc",
    "metadata": {
     "collapsed": false
    },
-   "id": "b24413a3fa2f8ebc"
+   "source": [
+    "### Create your Agent with the Ionic Commerce Tool"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "743fe10004227dcd",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-07T21:49:38.043018Z",
+     "start_time": "2024-02-07T21:49:34.784219Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from ionic_langchain.tool import Ionic, IonicTool\n",
@@ -133,29 +147,29 @@
     "agent_executor = AgentExecutor(\n",
     "    agent=agent, tools=tools, handle_parsing_errors=True, verbose=True, max_iterations=5\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-07T21:49:38.043018Z",
-     "start_time": "2024-02-07T21:49:34.784219Z"
-    }
-   },
-   "id": "743fe10004227dcd",
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Run the Agent"
-   ],
+   "id": "b0b3bfeffcee2bc8",
    "metadata": {
     "collapsed": false
    },
-   "id": "b0b3bfeffcee2bc8"
+   "source": [
+    "### Run the Agent"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "c1713fb2e556ef68",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-07T21:50:12.962001Z",
+     "start_time": "2024-02-07T21:50:04.617813Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -163,22 +177,25 @@
      "text": [
       "\n",
       "\n",
-      "\u001B[1m> Entering new AgentExecutor chain...\u001B[0m\n",
-      "\u001B[32;1m\u001B[1;3m I should use the Ionic Commerce Shopping Tool to find 4k monitors for the user.\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m I should use the Ionic Commerce Shopping Tool to find 4k monitors for the user.\n",
       "Action: ionic_commerce_shopping_tool\n",
-      "Action Input: 4k monitor, 10, 0, 100000\u001B[0m\u001B[36;1m\u001B[1;3m[{'products': [{'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B098HQ8YRX?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B098HQ8YRX', 'name': 'Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Black 2021 (U275W-UPT)', 'price': '$169.97', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41URcXrndAL._SL160_.jpg', 'brand_name': 'SCEPTRE', 'upc': None}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/U7ovsY'}], 'merchant_name': 'Walmart', 'merchant_product_id': '467011991', 'name': 'Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Machine Black (U275W-UPT)', 'price': '$169.97', 'status': 'available', 'thumbnail': 'https://i5.walmartimages.com/asr/02decf19-4c2b-471f-a6b9-a4ace660b625.fa86eb00b4d8bb56df27fc52df26d937.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff', 'brand_name': 'Sceptre', 'upc': '792343327752'}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/HFpqjN'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A83150A1', 'name': 'PowerExpand USB-C to DisplayPort Adapter Default Title', 'price': '$19.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/1_e96a854c-8a8d-44ef-a373-edb77c57c3bd.jpg?v=1614697073', 'brand_name': 'Anker', 'upc': ''}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/ftvaKh'}], 'merchant_name': 'Walmart', 'merchant_product_id': '135427918', 'name': 'SAMSUNG 32\" Class ViewFinity Curved Wide Screen 4K UHD (3840 x 2160) Monitor- LU32R590CWNXZA', 'price': '$449.99', 'status': 'available', 'thumbnail': 'https://i5.walmartimages.com/asr/101eea42-64af-414c-9959-ca84d47a3dd8.d758651afab97e2cfc2c35c1d3299f92.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff', 'brand_name': 'Samsung', 'upc': '887276301075'}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B07CS3JGPC?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B07CS3JGPC', 'name': 'SAMSUNG UJ59 Series 32-Inch 4K UHD (3840x2160) Computer Monitor, HDMI, Display Port, Eye Saver/Flicker Free Mode, FreeSync (LU32J590UQNXZA),Black', 'price': '$279.99', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41GAyJn9DDL._SL160_.jpg', 'brand_name': 'Samsung', 'upc': None}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/u1ccW9'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A8730011', 'name': 'Anker Nylon USB-C to HDMI 4K Cable Gray', 'price': '$27.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/71xPCxLibnL.jpg?v=1622442549', 'brand_name': 'Anker', 'upc': ''}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/vYnxMI'}], 'merchant_name': 'Walmart', 'merchant_product_id': '2167141300', 'name': 'MSI 32\" 144 Hz UHD gaming monitor FreeSync Premium (AMD Adaptive Sync) 3840 x 2160 (4K) ADOBE RGB / DCI-P3 / SRGB 90% / 91% / 114% G321CU', 'price': '$429.99', 'status': 'available', 'thumbnail': 'https://i5.walmartimages.com/asr/2f1dda11-e06f-43da-8985-5d45598b61e9.dea49aa94c4ed9550cd0c08b7f292491.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff', 'brand_name': 'MSI', 'upc': '824142297995'}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B084V9CJB1?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B084V9CJB1', 'name': 'SAMSUNG 28-Inch ViewFinity UR55 Series 4K UHD IPS Computer Monitor, HDR10, AMD FreeSync, HDMI 2.0 and DisplayPort 1.2, Bezelless Display, Eye Care, LU28R550UQNXZA, 2023', 'price': '$249.99', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41etykq-WqL._SL160_.jpg', 'brand_name': 'SAMSUNG', 'upc': None}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/byx5Kx'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A83820A1', 'name': 'Anker 655 USB-C Hub (8-in-1) Charcoal Gray', 'price': '$89.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/A83820A1_TD01_V1.jpg?v=1648195200', 'brand_name': 'Anker', 'upc': ''}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/Wg68Kl'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A8382021', 'name': 'Anker 655 USB-C Hub (8-in-1) Earthy White', 'price': '$84.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/A8382021_TD01_V1.jpg?v=1648195200', 'brand_name': 'Anker', 'upc': ''}], 'query': {'query': '4k monitor', 'max_price': 100000, 'min_price': 0, 'num_results': 10}}]\u001B[0m\u001B[32;1m\u001B[1;3m I now know the final answer\n",
+      "Action Input: 4k monitor, 10, 0, 100000\u001b[0m\u001b[36;1m\u001b[1;3m[{'products': [{'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B098HQ8YRX?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B098HQ8YRX', 'name': 'Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Black 2021 (U275W-UPT)', 'price': '$169.97', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41URcXrndAL._SL160_.jpg', 'brand_name': 'SCEPTRE', 'upc': None}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/U7ovsY'}], 'merchant_name': 'Walmart', 'merchant_product_id': '467011991', 'name': 'Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Machine Black (U275W-UPT)', 'price': '$169.97', 'status': 'available', 'thumbnail': 'https://i5.walmartimages.com/asr/02decf19-4c2b-471f-a6b9-a4ace660b625.fa86eb00b4d8bb56df27fc52df26d937.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff', 'brand_name': 'Sceptre', 'upc': '792343327752'}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/HFpqjN'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A83150A1', 'name': 'PowerExpand USB-C to DisplayPort Adapter Default Title', 'price': '$19.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/1_e96a854c-8a8d-44ef-a373-edb77c57c3bd.jpg?v=1614697073', 'brand_name': 'Anker', 'upc': ''}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/ftvaKh'}], 'merchant_name': 'Walmart', 'merchant_product_id': '135427918', 'name': 'SAMSUNG 32\" Class ViewFinity Curved Wide Screen 4K UHD (3840 x 2160) Monitor- LU32R590CWNXZA', 'price': '$449.99', 'status': 'available', 'thumbnail': 'https://i5.walmartimages.com/asr/101eea42-64af-414c-9959-ca84d47a3dd8.d758651afab97e2cfc2c35c1d3299f92.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff', 'brand_name': 'Samsung', 'upc': '887276301075'}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B07CS3JGPC?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B07CS3JGPC', 'name': 'SAMSUNG UJ59 Series 32-Inch 4K UHD (3840x2160) Computer Monitor, HDMI, Display Port, Eye Saver/Flicker Free Mode, FreeSync (LU32J590UQNXZA),Black', 'price': '$279.99', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41GAyJn9DDL._SL160_.jpg', 'brand_name': 'Samsung', 'upc': None}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/u1ccW9'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A8730011', 'name': 'Anker Nylon USB-C to HDMI 4K Cable Gray', 'price': '$27.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/71xPCxLibnL.jpg?v=1622442549', 'brand_name': 'Anker', 'upc': ''}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/vYnxMI'}], 'merchant_name': 'Walmart', 'merchant_product_id': '2167141300', 'name': 'MSI 32\" 144 Hz UHD gaming monitor FreeSync Premium (AMD Adaptive Sync) 3840 x 2160 (4K) ADOBE RGB / DCI-P3 / SRGB 90% / 91% / 114% G321CU', 'price': '$429.99', 'status': 'available', 'thumbnail': 'https://i5.walmartimages.com/asr/2f1dda11-e06f-43da-8985-5d45598b61e9.dea49aa94c4ed9550cd0c08b7f292491.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff', 'brand_name': 'MSI', 'upc': '824142297995'}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B084V9CJB1?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B084V9CJB1', 'name': 'SAMSUNG 28-Inch ViewFinity UR55 Series 4K UHD IPS Computer Monitor, HDR10, AMD FreeSync, HDMI 2.0 and DisplayPort 1.2, Bezelless Display, Eye Care, LU28R550UQNXZA, 2023', 'price': '$249.99', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41etykq-WqL._SL160_.jpg', 'brand_name': 'SAMSUNG', 'upc': None}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/byx5Kx'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A83820A1', 'name': 'Anker 655 USB-C Hub (8-in-1) Charcoal Gray', 'price': '$89.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/A83820A1_TD01_V1.jpg?v=1648195200', 'brand_name': 'Anker', 'upc': ''}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/Wg68Kl'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A8382021', 'name': 'Anker 655 USB-C Hub (8-in-1) Earthy White', 'price': '$84.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/A8382021_TD01_V1.jpg?v=1648195200', 'brand_name': 'Anker', 'upc': ''}], 'query': {'query': '4k monitor', 'max_price': 100000, 'min_price': 0, 'num_results': 10}}]\u001b[0m\u001b[32;1m\u001b[1;3m I now know the final answer\n",
       "Final Answer: 1. Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Black 2021 (U275W-UPT): $169.97 -- https://www.amazon.com/dp/B098HQ8YRX?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1\n",
       "2. Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Machine Black (U275W-UPT): $169.97 -- https://brwi.short.gy/U7ovsY\n",
       "3. PowerExpand USB-C to DisplayPort Adapter Default Title: $19.99 -- https://brwi.short.gy/HFpqjN\n",
       "4. SAMSUNG 32\" Class ViewFinity Curved Wide Screen 4K UHD (3840 x 2160) Monitor- LU32R590CWNXZA: $449.99 -- https://brwi.short.gy/ftvaKh\n",
-      "\u001B[0m\n",
+      "\u001b[0m\n",
       "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n"
+      "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'input': \"I'm looking for a new 4k monitor can you find me some options for less than $1000\",\n 'output': '1. Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Black 2021 (U275W-UPT): $169.97 -- https://www.amazon.com/dp/B098HQ8YRX?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1\\n2. Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Machine Black (U275W-UPT): $169.97 -- https://brwi.short.gy/U7ovsY\\n3. PowerExpand USB-C to DisplayPort Adapter Default Title: $19.99 -- https://brwi.short.gy/HFpqjN\\n4. SAMSUNG 32\" Class ViewFinity Curved Wide Screen 4K UHD (3840 x 2160) Monitor- LU32R590CWNXZA: $449.99 -- https://brwi.short.gy/ftvaKh'}"
+      "text/plain": [
+       "{'input': \"I'm looking for a new 4k monitor can you find me some options for less than $1000\",\n",
+       " 'output': '1. Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Black 2021 (U275W-UPT): $169.97 -- https://www.amazon.com/dp/B098HQ8YRX?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1\\n2. Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Machine Black (U275W-UPT): $169.97 -- https://brwi.short.gy/U7ovsY\\n3. PowerExpand USB-C to DisplayPort Adapter Default Title: $19.99 -- https://brwi.short.gy/HFpqjN\\n4. SAMSUNG 32\" Class ViewFinity Curved Wide Screen 4K UHD (3840 x 2160) Monitor- LU32R590CWNXZA: $449.99 -- https://brwi.short.gy/ftvaKh'}"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -190,16 +207,7 @@
     "    \"I'm looking for a new 4k monitor can you find me some options for less than $1000\"\n",
     ")\n",
     "agent_executor.invoke({\"input\": input})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-07T21:50:12.962001Z",
-     "start_time": "2024-02-07T21:50:04.617813Z"
-    }
-   },
-   "id": "c1713fb2e556ef68",
-   "execution_count": 4
+   ]
   }
  ],
  "metadata": {
@@ -218,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
