Add Authentication steps

--- a/examples/notebooks/langchain_react_agent_gemini.ipynb
+++ b/examples/notebooks/langchain_react_agent_gemini.ipynb
@@ -60,13 +60,91 @@
     "### Setup Google Auth Key\n",
     "To use Google's Vertex AI, you will need to [create a Google Cloud project](https://developers.google.com/workspace/guides/create-project), enable billing, and then enable the Vertex AI API.\n",
     "\n",
-    "When you have a project and Vertex enabled, configure your Google Cloud credentials by running the following command in your terminal:\n",
+    "When you have a project and Vertex enabled, you can configure your Google Cloud credentials by running the following command in your terminal:\n",
     "\n",
     "```bash\n",
-    "gcloud auth application-default login\n",
+    "gcloud auth login\n",
     "```\n",
     "\n",
     "This will open a browser window asking you to log in to your Google account and grant permissions to the gcloud command-line tool. After you've done this, you should see a message in your terminal saying that you are now authenticated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a803e20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install Google Cloud AI Platform\n",
+    "! pip3 install --upgrade google-cloud-aiplatform --quiet --no-warn-conflicts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3157769",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5ee25f3",
+   "metadata": {},
+   "source": [
+    "#### Colab only: Uncomment the following cell to restart the kernel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b11728f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Automatically restart kernel after installs so that your environment can access the new packages\n",
+    "# import IPython\n",
+    "\n",
+    "# app = IPython.Application.instance()\n",
+    "# app.kernel.do_shutdown(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "315729c0",
+   "metadata": {},
+   "source": [
+    "##### To authenticate running locally, uncomment and run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79a83e60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! gcloud auth login"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c5d1d51",
+   "metadata": {},
+   "source": [
+    "##### To authenticate in Colab, uncomment and run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29974f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from google.colab import auth\n",
+    "# auth.authenticate_user()"
    ]
   },
   {
