--- a/examples/notebooks/langchain_react_agent_openai.ipynb
+++ b/examples/notebooks/langchain_react_agent_openai.ipynb
@@ -50,7 +50,7 @@
     "Either set your environment variable:\n",
     "`export OPENAI_API_KEY=<YOUR_API_KEY_HERE` \n",
     "\n",
-    "Or edit the following code block and replace \"YOUR_API_KEY_HERE\" with your key."
+    "Or edit the following code block and replace \"YOUR_API_KEY_HERE\" with your key. Be careful to not leak your API Key."
    ]
   },
   {
