Update Google Auth notes

--- a/examples/notebooks/langchain_react_agent_gemini.ipynb
+++ b/examples/notebooks/langchain_react_agent_gemini.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "10910b7361beb918",
    "metadata": {
     "collapsed": false,
@@ -71,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5a803e20",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install Google Cloud AI Platform\n",
-    "! pip3 install --upgrade google-cloud-aiplatform --quiet --no-warn-conflicts"
+    "! pip3 install --upgrade --quiet  google-cloud-aiplatform"
    ]
   },
   {
@@ -85,7 +85,8 @@
    "id": "c5ee25f3",
    "metadata": {},
    "source": [
-    "#### Colab only: Uncomment the following cell to restart the kernel."
+    "#### Colab only: Uncomment the following cell to restart the kernel\n",
+    "Automatically restart kernel after installs so that your environment can access the new packages"
    ]
   },
   {
@@ -95,7 +96,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Automatically restart kernel after installs so that your environment can access the new packages\n",
     "# import IPython\n",
     "\n",
     "# app = IPython.Application.instance()\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a92fbdb3407a0405",
    "metadata": {
     "ExecuteTime": {
