Google Auth with Colab notes

--- a/examples/notebooks/langchain_react_agent_gemini.ipynb
+++ b/examples/notebooks/langchain_react_agent_gemini.ipynb
@@ -135,8 +135,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import vertexai\n",
     "# from google.colab import auth\n",
-    "# auth.authenticate_user()"
+    "\n",
+    "# auth.authenticate_user()\n",
+    "\n",
+    "\n",
+    "# PROJECT_ID = \"[your-project-id]\"  # @param {type:\"string\"}\n",
+    "# REGION = \"us-central1\"  # @param {type:\"string\"}\n",
+    "\n",
+    "# # Initialize Vertex AI SDK\n",
+    "# vertexai.init(project=PROJECT_ID, location=REGION)"
    ]
   },
   {
