still use application-default

--- a/examples/notebooks/langchain_react_agent_gemini.ipynb
+++ b/examples/notebooks/langchain_react_agent_gemini.ipynb
@@ -63,7 +63,7 @@
     "When you have a project and Vertex enabled, you can configure your Google Cloud credentials by running the following command in your terminal:\n",
     "\n",
     "```bash\n",
-    "gcloud auth login\n",
+    "gcloud auth application-default login\n",
     "```\n",
     "\n",
     "This will open a browser window asking you to log in to your Google account and grant permissions to the gcloud command-line tool. After you've done this, you should see a message in your terminal saying that you are now authenticated."
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! gcloud auth login"
+    "# ! gcloud auth application-default login"
    ]
   },
   {
