Update Gemin Notebook

--- a/examples/notebooks/langchain_react_agent_gemini.ipynb
+++ b/examples/notebooks/langchain_react_agent_gemini.ipynb
@@ -12,7 +12,11 @@
    "source": [
     "# Ionic with LangChain's ChatGoogleGenerativeAI agent and Gemini Pro model\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ioniccommerce/examples/blob/main/examples/notebooks/langchain_react_agent_gemini.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ioniccommerce/examples/blob/main/examples/notebooks/langchain_react_agent_gemini.ipynb)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "This notebook shows how to set up LangChain with the Google Gemini Pro LLM model with the Ionic Commerce tool. If you are running this notebook on Colab, please be sure to uncomment and run the Colab code blocks."
    ]
   },
   {
@@ -30,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "10910b7361beb918",
    "metadata": {
     "collapsed": false,
@@ -60,18 +64,12 @@
     "### Setup Google Auth Key\n",
     "To use Google's Vertex AI, you will need to [create a Google Cloud project](https://developers.google.com/workspace/guides/create-project), enable billing, and then enable the Vertex AI API.\n",
     "\n",
-    "When you have a project and Vertex enabled, you can configure your Google Cloud credentials by running the following command in your terminal:\n",
-    "\n",
-    "```bash\n",
-    "gcloud auth application-default login\n",
-    "```\n",
-    "\n",
-    "This will open a browser window asking you to log in to your Google account and grant permissions to the gcloud command-line tool. After you've done this, you should see a message in your terminal saying that you are now authenticated."
+    "When you have a project and Vertex enabled, you can configure your Google Cloud credentials by running the following steps."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5a803e20",
    "metadata": {},
    "outputs": [],
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a92fbdb3407a0405",
    "metadata": {
     "ExecuteTime": {
