--- a/examples/notebooks/langchain_react_agent_gemini.ipynb
+++ b/examples/notebooks/langchain_react_agent_gemini.ipynb
@@ -4,15 +4,19 @@
    "cell_type": "markdown",
    "id": "7dfef8b73bf75987",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
-    "# Ionic with LangChain's ChatGoogleGenerativeAI agent and Gemini Pro model\n",
+    "# Ionic using LangChain's ChatGoogleGenerativeAI agent and Gemini Pro model\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ioniccommerce/examples/blob/main/examples/notebooks/langchain_react_agent_gemini.ipynb)\n",
+    "\n",
+    "\n",
+    "[Ionic](https://www.ioniccommerce.com/) is a plug and play ecommerce marketplace for AI Assistants. By using Ionic, you are effortlessly providing your users with the ability to shop and transact directly within your agent, and you'll get a cut of the transaction.\n",
+    "\n",
+    "This is a basic jupyter notebook demonstrating how to integrate the Ionic Shopping Tool. For more information on setting up your Agent with Ionic, see the Ionic [documentation](https://docs.ioniccommerce.com/introduction).\n",
+    "\n",
+    "This Jupyter Notebook demonstrates how to use Ionic with LangChain's ChatGoogleGenerativeAI agent and the Gemini Pro model.\n",
     "\n",
     "---\n",
     "\n",
@@ -23,10 +27,7 @@
    "cell_type": "markdown",
    "id": "8ef36e9cd0b261cb",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Install dependencies"
@@ -37,10 +38,7 @@
    "execution_count": null,
    "id": "10910b7361beb918",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -55,10 +53,7 @@
    "cell_type": "markdown",
    "id": "b2801d1a76eff0a3",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Setup Google Auth Key\n",
@@ -150,10 +145,7 @@
    "cell_type": "markdown",
    "id": "566de0660cd33a31",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Create your Agent with the Ionic Commerce Tool"
@@ -168,10 +160,7 @@
      "end_time": "2024-02-07T22:43:15.553278Z",
      "start_time": "2024-02-07T22:43:14.792765Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -232,10 +221,7 @@
    "cell_type": "markdown",
    "id": "3a39c5fe7048450f",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Run the Agent"
@@ -250,10 +236,7 @@
      "end_time": "2024-02-07T22:44:58.829941Z",
      "start_time": "2024-02-07T22:44:51.304432Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -262,16 +245,16 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mI can use the Ionic Commerce Shopping Tool to find products related to this query.\n",
+      "\u001B[1m> Entering new AgentExecutor chain...\u001B[0m\n",
+      "\u001B[32;1m\u001B[1;3mI can use the Ionic Commerce Shopping Tool to find products related to this query.\n",
       "Action: ionic_commerce_shopping_tool\n",
-      "Action Input: 4K Monitor, 4, 10000, 60000\u001b[0m\u001b[36;1m\u001b[1;3m[{'products': [{'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/ldDEuQ'}], 'merchant_name': 'Walmart', 'merchant_product_id': '5085494806', 'name': 'KOORUI 27 inch IPS Computer Monitor,4K UHD,HDR10,90% DCI-P3,Adpitive-sync,Dp1.4&HDMI2.0 Ports,N07', 'price': '$189.88', 'status': 'available', 'thumbnail': 'https://i5.walmartimages.com/asr/a79af0d8-6338-41c2-99fc-a7a5f7c7933e.70b004740dda930dd21f79415869250f.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff', 'brand_name': 'KOORUI', 'upc': '679262965879'}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B098HQ8YRX?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B098HQ8YRX', 'name': 'Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Black 2021 (U275W-UPT)', 'price': '$169.97', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41URcXrndAL._SL160_.jpg', 'brand_name': 'SCEPTRE', 'upc': None}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/HFpqjN'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A83150A1', 'name': 'PowerExpand USB-C to DisplayPort Adapter Default Title', 'price': '$19.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/1_e96a854c-8a8d-44ef-a373-edb77c57c3bd.jpg?v=1614697073', 'brand_name': 'Anker', 'upc': ''}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B07CS3JGPC?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B07CS3JGPC', 'name': 'SAMSUNG UJ59 Series 32-Inch 4K UHD (3840x2160) Computer Monitor, HDMI, Display Port, Eye Saver/Flicker Free Mode, FreeSync (LU32J590UQNXZA),Black', 'price': '$279.99', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41GAyJn9DDL._SL160_.jpg', 'brand_name': 'Samsung', 'upc': None}], 'query': {'query': '4K Monitor', 'max_price': 60000, 'min_price': 10000, 'num_results': 4}}]\u001b[0m\u001b[32;1m\u001b[1;3mThe tool has returned some results.\n",
+      "Action Input: 4K Monitor, 4, 10000, 60000\u001B[0m\u001B[36;1m\u001B[1;3m[{'products': [{'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/ldDEuQ'}], 'merchant_name': 'Walmart', 'merchant_product_id': '5085494806', 'name': 'KOORUI 27 inch IPS Computer Monitor,4K UHD,HDR10,90% DCI-P3,Adpitive-sync,Dp1.4&HDMI2.0 Ports,N07', 'price': '$189.88', 'status': 'available', 'thumbnail': 'https://i5.walmartimages.com/asr/a79af0d8-6338-41c2-99fc-a7a5f7c7933e.70b004740dda930dd21f79415869250f.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff', 'brand_name': 'KOORUI', 'upc': '679262965879'}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B098HQ8YRX?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B098HQ8YRX', 'name': 'Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor up to 70Hz DisplayPort HDMI 99% sRGB Build-in Speakers, Black 2021 (U275W-UPT)', 'price': '$169.97', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41URcXrndAL._SL160_.jpg', 'brand_name': 'SCEPTRE', 'upc': None}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://brwi.short.gy/HFpqjN'}], 'merchant_name': 'Anker', 'merchant_product_id': 'product_12521_A83150A1', 'name': 'PowerExpand USB-C to DisplayPort Adapter Default Title', 'price': '$19.99', 'status': 'available', 'thumbnail': 'https://cdn.shopify.com/s/files/1/0493/9834/9974/products/1_e96a854c-8a8d-44ef-a373-edb77c57c3bd.jpg?v=1614697073', 'brand_name': 'Anker', 'upc': ''}, {'links': [{'text': 'Details', 'type': 'pdp', 'url': 'https://www.amazon.com/dp/B07CS3JGPC?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1'}], 'merchant_name': 'Amazon', 'merchant_product_id': 'B07CS3JGPC', 'name': 'SAMSUNG UJ59 Series 32-Inch 4K UHD (3840x2160) Computer Monitor, HDMI, Display Port, Eye Saver/Flicker Free Mode, FreeSync (LU32J590UQNXZA),Black', 'price': '$279.99', 'status': 'available', 'thumbnail': 'https://m.media-amazon.com/images/I/41GAyJn9DDL._SL160_.jpg', 'brand_name': 'Samsung', 'upc': None}], 'query': {'query': '4K Monitor', 'max_price': 60000, 'min_price': 10000, 'num_results': 4}}]\u001B[0m\u001B[32;1m\u001B[1;3mThe tool has returned some results.\n",
       "Final Answer: 1. KOORUI 27 inch IPS Computer Monitor: $189.88 -- https://brwi.short.gy/ldDEuQ \n",
       "2. Sceptre 4K IPS 27\" 3840 x 2160 UHD Monitor: $169.97 -- https://www.amazon.com/dp/B098HQ8YRX?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1\n",
       "3. PowerExpand USB-C to DisplayPort Adapter: $19.99 -- https://brwi.short.gy/HFpqjN\n",
-      "4. SAMSUNG UJ59 Series 32-Inch 4K UHD (3840x2160) Computer Monitor: $279.99 -- https://www.amazon.com/dp/B07CS3JGPC?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1\u001b[0m\n",
+      "4. SAMSUNG UJ59 Series 32-Inch 4K UHD (3840x2160) Computer Monitor: $279.99 -- https://www.amazon.com/dp/B07CS3JGPC?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1\u001B[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "\u001B[1m> Finished chain.\u001B[0m\n"
      ]
     },
     {
