--- a/examples/notebooks/llama_openai.ipynb
+++ b/examples/notebooks/llama_openai.ipynb
@@ -26,81 +26,15 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: llama-index in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (0.9.45.post1)\r\n",
-      "Requirement already satisfied: llama-hub==0.0.78 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (0.0.78)\r\n",
-      "Requirement already satisfied: ionic-api-sdk in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (0.7.1)\r\n",
-      "Requirement already satisfied: html2text in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-hub==0.0.78) (2020.1.16)\r\n",
-      "Requirement already satisfied: psutil in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-hub==0.0.78) (5.9.8)\r\n",
-      "Requirement already satisfied: pyaml<24.0.0,>=23.9.7 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-hub==0.0.78) (23.12.0)\r\n",
-      "Requirement already satisfied: retrying in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-hub==0.0.78) (1.3.4)\r\n",
-      "Requirement already satisfied: SQLAlchemy>=1.4.49 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from SQLAlchemy[asyncio]>=1.4.49->llama-index) (2.0.25)\r\n",
-      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.6 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (3.9.3)\r\n",
-      "Requirement already satisfied: dataclasses-json in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (0.6.4)\r\n",
-      "Requirement already satisfied: deprecated>=1.2.9.3 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (1.2.14)\r\n",
-      "Requirement already satisfied: dirtyjson<2.0.0,>=1.0.8 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (1.0.8)\r\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (2024.2.0)\r\n",
-      "Requirement already satisfied: httpx in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (0.26.0)\r\n",
-      "Requirement already satisfied: nest-asyncio<2.0.0,>=1.5.8 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (1.6.0)\r\n",
-      "Requirement already satisfied: networkx>=3.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (3.2.1)\r\n",
-      "Requirement already satisfied: nltk<4.0.0,>=3.8.1 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (3.8.1)\r\n",
-      "Requirement already satisfied: numpy in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (1.26.4)\r\n",
-      "Requirement already satisfied: openai>=1.1.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (1.11.1)\r\n",
-      "Requirement already satisfied: pandas in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (2.2.0)\r\n",
-      "Requirement already satisfied: requests>=2.31.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (2.31.0)\r\n",
-      "Requirement already satisfied: tenacity<9.0.0,>=8.2.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (8.2.3)\r\n",
-      "Requirement already satisfied: tiktoken>=0.3.3 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (0.5.2)\r\n",
-      "Requirement already satisfied: typing-extensions>=4.5.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (4.9.0)\r\n",
-      "Requirement already satisfied: typing-inspect>=0.8.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from llama-index) (0.9.0)\r\n",
-      "Requirement already satisfied: certifi>=2023.7.22 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (2024.2.2)\r\n",
-      "Requirement already satisfied: charset-normalizer>=3.2.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (3.3.2)\r\n",
-      "Requirement already satisfied: idna>=3.4 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (3.6)\r\n",
-      "Requirement already satisfied: jsonpath-python>=1.0.6 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (1.0.6)\r\n",
-      "Requirement already satisfied: marshmallow>=3.19.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (3.20.2)\r\n",
-      "Requirement already satisfied: mypy-extensions>=1.0.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (1.0.0)\r\n",
-      "Requirement already satisfied: packaging>=23.1 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (23.2)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (2.8.2)\r\n",
-      "Requirement already satisfied: six>=1.16.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (1.16.0)\r\n",
-      "Requirement already satisfied: urllib3>=1.26.18 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from ionic-api-sdk) (2.2.0)\r\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.6->llama-index) (1.3.1)\r\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.6->llama-index) (23.2.0)\r\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.6->llama-index) (1.4.1)\r\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.6->llama-index) (6.0.5)\r\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from aiohttp<4.0.0,>=3.8.6->llama-index) (1.9.4)\r\n",
-      "Requirement already satisfied: wrapt<2,>=1.10 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from deprecated>=1.2.9.3->llama-index) (1.14.1)\r\n",
-      "Requirement already satisfied: click in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from nltk<4.0.0,>=3.8.1->llama-index) (8.1.7)\r\n",
-      "Requirement already satisfied: joblib in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from nltk<4.0.0,>=3.8.1->llama-index) (1.3.2)\r\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from nltk<4.0.0,>=3.8.1->llama-index) (2023.12.25)\r\n",
-      "Requirement already satisfied: tqdm in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from nltk<4.0.0,>=3.8.1->llama-index) (4.66.1)\r\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from openai>=1.1.0->llama-index) (4.2.0)\r\n",
-      "Requirement already satisfied: distro<2,>=1.7.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from openai>=1.1.0->llama-index) (1.9.0)\r\n",
-      "Requirement already satisfied: pydantic<3,>=1.9.0 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from openai>=1.1.0->llama-index) (1.10.14)\r\n",
-      "Requirement already satisfied: sniffio in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from openai>=1.1.0->llama-index) (1.3.0)\r\n",
-      "Requirement already satisfied: httpcore==1.* in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from httpx->llama-index) (1.0.2)\r\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from httpcore==1.*->httpx->llama-index) (0.14.0)\r\n",
-      "Requirement already satisfied: PyYAML in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from pyaml<24.0.0,>=23.9.7->llama-hub==0.0.78) (6.0.1)\r\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from SQLAlchemy[asyncio]>=1.4.49->llama-index) (3.0.3)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from pandas->llama-index) (2024.1)\r\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /Users/jarod/Projects/ionic_examples/.venv/lib/python3.11/site-packages (from pandas->llama-index) (2023.4)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! pip install llama-index llama-hub==0.0.79 ionic-api-sdk"
+    "! pip install llama-index-core==0.10.0 ionic-api-sdk llama-index-tools-ionic-shopping"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-08T21:44:14.246983Z",
-     "start_time": "2024-02-08T21:44:12.155186Z"
-    }
+    "collapsed": false
    },
    "id": "856d9803ec1cdd9c",
-   "execution_count": 6
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -120,20 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-02-08T21:44:19.077211Z",
-     "start_time": "2024-02-08T21:44:19.066189Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import os\n",
     "import openai\n",
-    "from llama_index.agent import OpenAIAgent\n",
+    "from llama_index.legacy.agent import OpenAIAgent\n",
     "\n",
     "openai.api_key = os.environ.get(\"OPENAI_API_KEY\", \"YOUR_API_KEY_HERE\")"
    ]
@@ -150,21 +80,9 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'llama_hub.tools.ionic_shopping'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[8], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mllama_hub\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mtools\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mionic_shopping\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mbase\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m IonicShoppingToolSpec\n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# optionally add you Ionic API Key\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m# IonicShoppingToolSpec(api_key=\"<my Ionic API Key>\")\u001B[39;00m\n\u001B[1;32m      5\u001B[0m ionic_tool \u001B[38;5;241m=\u001B[39m IonicShoppingToolSpec()\u001B[38;5;241m.\u001B[39mto_tool_list()\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'llama_hub.tools.ionic_shopping'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from llama_hub.tools.ionic_shopping.base import IonicShoppingToolSpec\n",
+    "from llama_index.tools.ionic_shopping import IonicShoppingToolSpec\n",
     "\n",
     "# optionally add you Ionic API Key\n",
     "# IonicShoppingToolSpec(api_key=\"<my Ionic API Key>\")\n",
@@ -174,14 +92,10 @@
     "    print(tool.metadata.name)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-08T21:44:26.539401Z",
-     "start_time": "2024-02-08T21:44:26.525607Z"
-    }
+    "collapsed": false
    },
    "id": "f95ef80d8aa9bd5f",
-   "execution_count": 8
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -204,12 +118,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T22:46:08.935312Z",
-     "start_time": "2024-01-29T22:46:08.780878Z"
+     "end_time": "2024-02-12T20:27:45.923933Z",
+     "start_time": "2024-02-12T20:27:45.680561Z"
     }
    },
    "id": "18bd589c4fd6ef44",
-   "execution_count": 4
+   "execution_count": 13
   },
   {
    "cell_type": "code",
@@ -218,26 +132,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query Query(query='5k monitor', max_price=100000, min_price=60000, num_results=3)\n",
-      "Here are 3 options for a 5k monitor between $600 and $1000:\n",
+      "Here are 3 options for 5k monitors between $600 and $1000:\n",
       "\n",
-      "1. SAMSUNG 27\" ViewFinity S9 Series 5K Computer Monitor - $999.99\n",
-      "   - [Details](https://www.amazon.com/dp/B0CB71BY87?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1)\n",
-      "   - ![Thumbnail](https://m.media-amazon.com/images/I/41Wy2hc5P2L._SL160_.jpg)\n",
-      "   - Brand: SAMSUNG\n",
-      "   - Available on Amazon\n",
+      "1. LG 27MD5KL-B 27 Inch UltraFine 5K (5120 x 2880) IPS Display with macOS Compatibility, DCI-P3 99% Color Gamut and Thunderbolt 3 Port, Black\n",
+      "   - Price: $996.99\n",
+      "   - [Details](https://www.amazon.com/dp/B07XV9NQSJ?tag=ioniccommer00-20&linkCode=osi&th=1&psc=1)\n",
+      "   - ![Thumbnail](https://m.media-amazon.com/images/I/21sZ383pAnL._SL160_.jpg)\n",
+      "   - Brand: LG\n",
       "\n",
-      "2. SAMSUNG 27\" Class QHD Curved Monitor - $699.99\n",
-      "   - [Details](https://brwi.short.gy/qxJVZ6)\n",
-      "   - ![Thumbnail](https://i5.walmartimages.com/asr/7794ed18-d65a-4996-abe0-82d2777c779c.5fab7f87d6e84f979a851f61049e549b.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff)\n",
-      "   - Brand: Samsung\n",
-      "   - UPC: 887276413129\n",
-      "   - Available at Walmart\n",
+      "2. LG 48\" UltraGear UHD OLED with Anti-Glare Low Reflection 0.1ms R/T 120Hz Gaming Monitor with G-SYNC Compatible - 48GQ900-B\n",
+      "   - Price: $799.00\n",
+      "   - [Details](https://brwi.short.gy/OpCsiE)\n",
+      "   - ![Thumbnail](https://i5.walmartimages.com/asr/a04e12c3-5b7f-4dad-a64a-3abe8139dcde.753eeedd27deee6934987e1e9de295a3.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff)\n",
+      "   - Brand: LG\n",
       "\n",
-      "3. SAMSUNG 27\" ViewFinity S9 Series 5K Computer Monitor (Open Box) - $749.99\n",
-      "   - [Details](https://brwi.short.gy/YAYBuD)\n",
-      "   - ![Thumbnail](https://i.ebayimg.com/thumbs/images/g/qWIAAOSwSxFlRQi2/s-l225.jpg)\n",
-      "   - Available on eBay\n",
+      "3. Ultrasharp U3421we Led Monitor Curved 34.1\" 3440 X 1440 Wqhd @ 60 Hz Ips 300 Cd/m\n",
+      "   - Price: $716.27\n",
+      "   - [Details](https://brwi.short.gy/R1Zwag)\n",
+      "   - ![Thumbnail](https://i5.walmartimages.com/asr/6ff82167-eb52-4d5e-bba8-36b12dac0c45.cd1cf1765c616c1ec1fdee7c6cbf6d62.jpeg?odnHeight=100&odnWidth=100&odnBg=ffffff)\n",
+      "   - Brand: Dell\n",
       "\n",
       "Please let me know if you need more information about any of these options.\n"
      ]
@@ -253,12 +166,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T22:46:55.891101Z",
-     "start_time": "2024-01-29T22:46:37.542833Z"
+     "end_time": "2024-02-12T20:28:00.727392Z",
+     "start_time": "2024-02-12T20:27:50.100715Z"
     }
    },
    "id": "aa6ee6bd0b1c8f22",
-   "execution_count": 6
+   "execution_count": 14
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9314c877db45bf2a"
   }
  ],
  "metadata": {
