distinguish legacy openai agent

--- a/examples/notebooks/llama_legacy_openai_agent.ipynb
+++ b/examples/notebooks/llama_legacy_openai_agent.ipynb
@@ -16,8 +16,7 @@
     "---\n",
     "\n",
     "## Setup the Tool\n",
-    "### First, let's install our dependencies\n",
-    "`llama-hub` @ `0.0.79` does not exist yet."
+    "### First, let's install our dependencies"
    ],
    "metadata": {
     "collapsed": false
