LangChain: OpenAI Tools Agent model

--- a/examples/notebooks/langchain_openai_tools.ipynb
+++ b/examples/notebooks/langchain_openai_tools.ipynb
@@ -100,12 +100,12 @@
     "# https://python.langchain.com/docs/modules/agents/agent_types/react\n",
     "# Please reach out to support@ionicapi.com for help with add'l agent types.\n",
     "\n",
-    "model = \"gpt-3.5-turbo-instruct\"\n",
+    "model = \"gpt-3.5-turbo-1106\"\n",
     "temperature = 0.6\n",
     "\n",
     "# Choose the LLM that will drive the agent\n",
     "# Only certain models support this\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-1106\", temperature=temperature, openai_api_key=openai_api_key)\n",
+    "llm = ChatOpenAI(model=model, temperature=temperature, openai_api_key=openai_api_key)\n",
     "\n",
     "\n",
     "ionic_tool = IonicTool().tool()\n",
