--- a/examples/notebooks/langchain_react_agent_openai_promptlayer.ipynb
+++ b/examples/notebooks/langchain_react_agent_openai_promptlayer.ipynb
@@ -7,7 +7,7 @@
     "collapsed": false
    },
    "source": [
-    "# Ionic using LangChain's ReAct agent and OpenAI GPT-3.5-turbo\n",
+    "# Ionic using LangChain ReAct Agent, GPT-3.5, and Promptlayer\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ioniccommerce/examples/blob/main/examples/notebooks/langchain_react_agent_openai.ipynb)\n",
     "\n",
