--- a/examples/notebooks/langchain_react_agent_openai.ipynb
+++ b/examples/notebooks/langchain_react_agent_openai.ipynb
@@ -100,14 +100,13 @@
    },
    "outputs": [],
    "source": [
-    "from ionic_langchain.tool import Ionic, IonicTool\n",
+    "from ionic_langchain.tool import IonicTool\n",
     "from langchain import hub\n",
-    "from langchain.agents import AgentExecutor, Tool, create_react_agent\n",
+    "from langchain.agents import AgentExecutor, create_react_agent\n",
     "from langchain_openai import OpenAI\n",
     "\n",
     "# Based on ReAct Agent\n",
     "# https://python.langchain.com/docs/modules/agents/agent_types/react\n",
-    "# Please reach out to support@ionicapi.com for help with add'l agent types.\n",
     "\n",
     "model = \"gpt-3.5-turbo-instruct\"\n",
     "temperature = 0.6\n",
