update llama index example: clearer pip install, config openAI api key, and show the array of tools

--- a/examples/notebooks/llama_openai_agent.ipynb
+++ b/examples/notebooks/llama_openai_agent.ipynb
@@ -27,7 +27,14 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "! pip install llama-index-core==0.10.0 llama-index-llms-openai llama-index-agent-openai ionic-api-sdk llama-index-tools-ionic-shopping"
+    "%%bash\n",
+    "\n",
+    "pip install --upgrade pip\n",
+    "\n",
+    "pip install llama-index-core==0.10.0 llama-index-llms-openai llama-index-agent-openai \n",
+    "\n",
+    "pip install ionic-api-sdk\n",
+    "pip install llama-index-tools-ionic-shopping"
    ],
    "metadata": {
     "collapsed": false
@@ -42,14 +49,30 @@
     "\n",
     "Create an API key at [OpenAI | API Keys](https://platform.openai.com/api-keys)\n",
     "\n",
-    "Either set your environment variable: `export OPENAI_API_KEY=<YOUR_API_KEY_HERE` \n",
-    "\n",
-    "Or edit the following code block and replace \"YOUR_API_KEY_HERE\" with your key. Be careful to not leak your API Key."
+    "Either set your environment variable: `export OPENAI_API_KEY=<YOUR_API_KEY_HERE` "
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "eedd002505e12801"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "openai_api_key = os.environ.get(\"OPENAI_API_KEY\", \"YOUR_API_KEY_HERE\") "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-13T00:10:30.367851Z",
+     "start_time": "2024-02-13T00:10:30.363430Z"
+    }
+   },
+   "id": "f224d42ad547c66d",
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -74,12 +97,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-12T23:53:48.821022Z",
-     "start_time": "2024-02-12T23:53:48.814480Z"
+     "end_time": "2024-02-13T00:10:30.371806Z",
+     "start_time": "2024-02-13T00:10:30.366944Z"
     }
    },
    "id": "f95ef80d8aa9bd5f",
-   "execution_count": 24
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -98,20 +121,20 @@
     "from llama_index.agent.openai import OpenAIAgent\n",
     "from llama_index.llms.openai import OpenAI\n",
     "\n",
-    "llm = OpenAI(model=\"gpt-3.5-turbo\")\n",
+    "llm = OpenAI(model=\"gpt-3.5-turbo\", api_key=openai_api_key)\n",
     "agent = OpenAIAgent.from_tools(\n",
-    "    ionic_tool, llm=llm, verbose=True\n",
+    "    [*ionic_tool], llm=llm, verbose=True, \n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-12T23:53:48.821303Z",
-     "start_time": "2024-02-12T23:53:48.817764Z"
+     "end_time": "2024-02-13T00:10:30.372050Z",
+     "start_time": "2024-02-13T00:10:30.370394Z"
     }
    },
    "id": "18bd589c4fd6ef44",
-   "execution_count": 25
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -164,12 +187,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-12T23:53:58.680946Z",
-     "start_time": "2024-02-12T23:53:48.822045Z"
+     "end_time": "2024-02-13T00:10:41.002830Z",
+     "start_time": "2024-02-13T00:10:30.375149Z"
     }
    },
    "id": "aa6ee6bd0b1c8f22",
-   "execution_count": 26
+   "execution_count": 10
   }
  ],
  "metadata": {
